--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
 </head>
 <body>
     <header>
+        <!-- Logo e Sfondo -->
         <div class="logo">
             <img src="../html-css-booleaner/Assets/img/logo.svg" width="100px" alt="">
         </div>
     </header>
 
     <main>
-        <h1>Internt deve essere al servizio del "bene pubblico": il manifesto di Tim Berner-Lee</h1>
+        <section>
+            <h1>Internt deve essere al servizio del "bene pubblico": il manifesto di Tim Berner-Lee</h1>
+            <div id="space">Scritto da
+                <span id="name">The Booleaner</span>
+                <p id="date">il 10/10/2020</p>
+            </div>
+            <!-- Box Immagini -->
+            <div>
+                <img src="../html-css-booleaner/Assets/img/tim-1.jpg" alt="">
+                <img src="../html-css-booleaner/Assets/img/tim-2.jpg" alt="">
+                <p class="description">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                <p class="description">2nd Photo: Wikimedia, by Paul Clarke</p>
+            </div>
+        </section>
     </main>
 
     
