--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
                 <p class="description">2nd Photo: Wikimedia, by Paul Clarke</p>
             </div>
         </section>
+
+        <article>
+            <div id="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.    Temporibus sapiente minima dolor ea recusandae nostrum     perferendis, corporis quam. Libero velit beatae rerum nam   dolor, aperiam dolorem ipsum rem fuga ut. Lorem ipsum dolor, <mark> sit amet consectetur adipisicing elit. Officia blanditiis eos    molestiae harum vitae. Nam et saepe consequatur</mark>, dicta, nulla  pariatur nesciunt deserunt eveniet id sint quia temporibus.  Mollitia, dignissimos? Lorem ipsum dolor sit amet consectetur    adipisicing elit. Veniam asperiores quia sint consequatur vel  doloremque, rerum dolore ducimus libero. Commodi expedita    porro quia ab explicabo culpa facilis tempora corporis quaerat!
+            </div>
+        </article>
+
+        <section>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laudantium fugit cupiditate nostrum, voluptate</li>
+                <li>hic incidunt nam odit provident debitis, iusto mollitia? Ratione saepe vero ipsum esse similique aliquam iure!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laudantium fugit cupiditate nostrum, voluptate</li>
+            </ul>
+        </section>
+
+        <section></section>
     </main>
 
     
