--- a/index.html
+++ b/index.html
@@ -43,9 +43,44 @@
                 <li>hic incidunt nam odit provident debitis, iusto mollitia? Ratione saepe vero ipsum esse similique aliquam iure!</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laudantium fugit cupiditate nostrum, voluptate</li>
             </ul>
-        </section>
 
-        <section></section>
+        </section>
+        <!-- Tabella -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>lorem ipsum dolor</th>
+                        <th>lorem ipsum dolor</th>
+                        <th>lorem ipsum dolor</th>
+                    </tr> 
+                </thead>
+
+                <tbody>
+                    <tr class="t-color">
+                        <td class="t-centre">lorem ipsum dolor</td>
+                        <td class="t-centre">lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo deleniti consequuntur ad. Ipsum ut in nostrum tempore rem dolorum aspernatur explicabo, sunt saepe, iste eaque sed neque commodi deleniti dignissimos.</td>
+                    </tr>
+
+                    <tr>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo deleniti consequuntur ad. Ipsum ut in nostrum tempore rem dolorum aspernatur explicabo, sunt saepe, iste eaque sed neque commodi deleniti dignissimos.</td>
+                    </tr>
+
+                </tbody>
+
+                <tfoot>
+                    <tr class="t-color">
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga earum hic itaque cum sit aperiam minima similique accusamus laboriosam excepturi suscipit deleniti neque iure molestiae quia, nihil mollitia! Libero, cupiditate.</td>
+                    </tr>
+                </tfoot>
+            </table>
+        <section>
+
+        </section>
     </main>
 
     
