--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <article>
-            <div id="text">
+            <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.    Temporibus sapiente minima dolor ea recusandae nostrum     perferendis, corporis quam. Libero velit beatae rerum nam   dolor, aperiam dolorem ipsum rem fuga ut. Lorem ipsum dolor, <mark> sit amet consectetur adipisicing elit. Officia blanditiis eos    molestiae harum vitae. Nam et saepe consequatur</mark>, dicta, nulla  pariatur nesciunt deserunt eveniet id sint quia temporibus.  Mollitia, dignissimos? Lorem ipsum dolor sit amet consectetur    adipisicing elit. Veniam asperiores quia sint consequatur vel  doloremque, rerum dolore ducimus libero. Commodi expedita    porro quia ab explicabo culpa facilis tempora corporis quaerat!
             </div>
         </article>
@@ -46,6 +46,7 @@
 
         </section>
         <!-- Tabella -->
+        <section>
             <table>
                 <thead>
                     <tr>
@@ -78,11 +79,25 @@
                     </tr>
                 </tfoot>
             </table>
-        <section>
-
         </section>
+
+        <article>
+            <div class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.    Temporibus sapiente minima dolor ea recusandae nostrum     perferendis, corporis quam. Libero velit beatae rerum nam   dolor, aperiam dolorem ipsum rem fuga ut. Lorem ipsum dolor, <mark> sit amet consectetur adipisicing elit. Officia blanditiis eos    molestiae harum vitae. Nam et saepe consequatur</mark>, dicta, nulla  pariatur nesciunt deserunt eveniet id sint quia temporibus.  Mollitia, dignissimos? Lorem ipsum dolor sit amet consectetur    adipisicing elit. Veniam asperiores quia sint consequatur vel  doloremque, rerum dolore ducimus libero. Commodi expedita    porro quia ab explicabo culpa facilis tempora corporis quaerat!
+            </div>
+        </article>
     </main>
 
+    <footer>
+        <p id="other">potrebbero interesarti</p>
+        <div class="lorem1">
+            Lorem ipsum dolor
+        </div>
+        <div class="lorem2">
+            Lorem ipsum dolor
+        </div>
+
+    </footer>
     
 </body>
 </html>
